#add_subdirectory(helloworld)
#add_subdirectory(firstapp)
#add_subdirectory(sierpinski)
#add_subdirectory(coloredtriangles)
#add_subdirectory(asteroids)
#add_subdirectory(asteroids4)
#add_subdirectory(spacerunners)
add_subdirectory(loadmodel)
#add_subdirectory(lookat)
add_subdirectory(highway)
#add_subdirectory(viewer1)
#add_subdirectory(highway_prototype)